# systemd-cri

./: .gitignore  README.md  WORKSPACE  build.zig  build.zig.zon  deps.bzl  flags.go  flake.nix  go.mod  go.sum  gomod2nix.toml  main.go  version.go
.github/workflows/: ci.yml  release.yml  update-proto.yml
cmd/systemd-cri/: BUILD.bazel  main.go
internal/config/: config.go
internal/cri/: image_native.go  image_server.go  runtime_server.go  streaming.go
internal/criservice/: image.go  runtime.go  service.go
internal/crisvc/: image.go  runtime.go  service.go
internal/machineman/: BUILD.bazel  image.go  runtime.go
internal/store/: store.go
internal/systemd/: manager.go
nix/: module.nix
release/: SHA256SUMS
scripts/: critest-runner.sh  update-proto.sh
src/: main.zig  root.zig
src/container/: container.zig  exec.zig  pod.zig
src/cri/: image_service.zig  proto.zig  runtime_service.zig  types.zig
src/cri/proto/: api.pb-c.c  api.pb-c.h
src/image/: machined.zig  pull.zig  store.zig
src/metrics/: prometheus.zig  server.zig
src/network/: cni.zig
src/rootfs/: mount.zig  overlay.zig
src/server/: grpc.zig  http2.zig  streaming.zig
src/state/: store.zig
src/systemd/: dbus.zig  manager.zig  properties.zig
src/tests/: full_integration.zig  integration.zig
src/tools/: critest_runner.zig
src/util/: logging.zig  uuid.zig
