load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "systemd-cri_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/project/cmd/systemd-cri",
    visibility = ["//visibility:private"],
    deps = [
        "@io_k8s_cri_api//pkg/apis/runtime/v1:runtime",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "systemd-cri",
    embed = [":systemd-cri_lib"],
    visibility = ["//visibility:public"],
)
